--- a/index.html
+++ b/index.html
@@ -214,9 +214,11 @@
 
     <section class="trending" id="food">
       <div class="trending__content" data-aos="fade-right">
-        <p class="sushi__subtitle">WHat's Trending | 人気メニュー</p>
-        <h3 class="sushi__title">Japanese Sushi</h3>
-        <p class="sushi__description">Fresh ingredients, authentic flavors</p>
+        <p class="sushi__subtitle">Qu'est-ce qui tend | 人気メニュー</p>
+        <h3 class="sushi__title">Sushi Japonais</h3>
+        <p class="sushi__description">
+          Ingrédients frais, saveurs authentiques
+        </p>
 
         <ul class="trending__list flex-between">
           <li>
