Add trending section

--- a/index.html
+++ b/index.html
@@ -213,63 +213,141 @@
     </section>
 
     <section class="trending" id="food">
-      <div class="trending__content" data-aos="fade-right">
-        <p class="sushi__subtitle">Qu'est-ce qui tend | 人気メニュー</p>
-        <h3 class="sushi__title">Sushi Japonais</h3>
-        <p class="sushi__description">
-          Ingrédients frais, saveurs authentiques
-        </p>
+      <section class="trending-sushi">
+        <div class="trending__content" data-aos="fade-right">
+          <p class="sushi__subtitle">Ce qui ferait plaisir | 人気メニュー</p>
+          <h3 class="sushi__title">Sushi Japonais</h3>
+          <p class="sushi__description">
+            Ingrédients frais, saveurs authentiques
+          </p>
 
-        <ul class="trending__list flex-between">
-          <li>
-            <div class="trending__icon flex-center">
-              <img src="assets/check.png" alt="check" />
-            </div>
-            <p>Make Sushi</p>
-          </li>
+          <ul class="trending__list flex-between">
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Make Sushi</p>
+            </li>
 
-          <li>
-            <div class="trending__icon flex-center">
-              <img src="assets/check.png" alt="check" />
-            </div>
-            <p>Oshizushi</p>
-          </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Oshizushi</p>
+            </li>
 
-          <li>
-            <div class="trending__icon flex-center">
-              <img src="assets/check.png" alt="check" />
-            </div>
-            <p>Uramaki Sushi</p>
-          </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Uramaki Sushi</p>
+            </li>
 
-          <li>
-            <div class="trending__icon flex-center">
-              <img src="assets/check.png" alt="check" />
-            </div>
-            <p>Nigiri Sushi</p>
-          </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Nigiri Sushi</p>
+            </li>
 
-          <li>
-            <div class="trending__icon flex-center">
-              <img src="assets/check.png" alt="check" />
-            </div>
-            <p>Temaki Sushi</p>
-          </li>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Temaki Sushi</p>
+            </li>
 
-          <li>
-            <div class="trending__icon flex-center">
-              <img src="assets/check.png" alt="check" />
-            </div>
-            <p>Inari Sushi</p>
-          </li>
-        </ul>
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Inari Sushi</p>
+            </li>
+          </ul>
+        </div>
+
+        <div class="trending__image flex-center">
+          <img src="assets/sushi-5.png" alt="sushi 5" data-aos="fade-left" />
+
+          <div class="trending__arrow trending__arrow-left flex-center">
+            <img src="assets/arrow-vertical.svg" alt="arrow-vertical" />
+          </div>
+
+          <div class="trending__arrow trending__arrow-bottom flex-center">
+            <img src="assets/arrow-horizontal.svg" alt="arrow-horizontal" />
+          </div>
+        </div>
+      </section>
+
+      <div class="trending__discover" data-aos="zoom-in">
+        <p>Découvrir</p>
       </div>
 
-      <div class="trending__image flex-center">
-        <img src="assets/sushi-5.png" alt="sushi 5" data-aos="fade-left" />
+      <section class="trending-drinks">
+        <div class="trending__image flex-center">
+          <img src="assets/sushi-4.png" alt="sushi-4" data-aos="fade-right" />
 
-        <div class=""></div>
-      </div>
+          <div class="trending__arrow trending__arrow-top">
+            <img src="assets/arrow-horizontal.svg" alt="arrow horizontal" />
+          </div>
+
+          <div class="trending__arrow trending__arrow-right">
+            <img src="assets/arrow-vertical.svg" alt="arrow vertical" />
+          </div>
+        </div>
+
+        <div class="trending__content" data-aos="fade-left">
+          <p class="sushi__subtitle">Ce qui ferait plaisir | 人気メニュー</p>
+          <h3 class="sushi__title">Boissons Japonaises</h3>
+          <p class="sushi__description">
+            Boissons fraîches, saveurs authentiques
+          </p>
+
+          <ul class="trending__list flex-between">
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Green Tea</p>
+            </li>
+
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Matcha</p>
+            </li>
+
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Green Tea</p>
+            </li>
+
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Green Tea</p>
+            </li>
+
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Green Tea</p>
+            </li>
+
+            <li>
+              <div class="trending__icon flex-center">
+                <img src="assets/check.svg" alt="check" />
+              </div>
+              <p>Green Tea</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </section>
 
     <script type="module" src="js/script.js"></script>
