Change for better text

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 
       <div class="hero-content">
         <div class="hero-content-info" data-aos="fade-left">
-          <h1>Découvrez la <span>Saveur</span> du Japon</h1>
+          <h1>L'Art du Sushi, <span>L'Excellence</span> Japonaise</h1>
           <p class="hero-content-info__subtitle">
-            Découvrez l'essence véritable de la cuisine japonaise avec nos
-            sushis et ramens authentiques.
+            Une symphonie de saveurs authentiques, préparée avec passion pour
+            une expérience culinaire inoubliable.
           </p>
           <div class="hero-content__buttons">
             <button class="hero-content__order-button">
-              Commander Maintenant
+              Commander Votre Festin
             </button>
             <button class="hero-content__play-button">
-              <img src="assets/play-circle.svg" alt="play" />Comment Commander
+              <img src="assets/play-circle.svg" alt="play" />Notre Savoir-Faire
             </button>
           </div>
         </div>
@@ -78,8 +78,7 @@
           <div class="hero-content__review">
             <img src="assets/user.png" alt="user" />
             <p>
-              C'est le meilleur sushi que j'ai jamais mangé. La qualité des
-              ingrédients est incroyable.
+              Une explosion de saveurs à chaque bouchée. Une qualité inégalée !
             </p>
           </div>
         </div>
@@ -93,7 +92,7 @@
         </div>
 
         <button class="about-us__button">
-          En Savoir Plus
+          Découvrir Notre Histoire
           <img src="assets/arrow-up-right.svg" alt="learn more" />
         </button>
 
@@ -103,22 +102,20 @@
       </div>
 
       <div class="about-us__content" data-aos="fade-left">
-        <p class="sushi__subtitle">À Propos / 本店のこと</p>
-        <h3 class="sushi__title">
-          Notre mission est d'apporter les meilleurs sushis au monde
-        </h3>
+        <p class="sushi__subtitle">Notre Héritage / 本店のこと</p>
+        <h3 class="sushi__title">Plus qu'un Sushi, Une Tradition</h3>
         <p class="sushi__description">
-          Nous sommes une équipe d'amoureux du sushi passionnés par l'idée
-          d'apporter les meilleurs sushis au monde. Nous utilisons les meilleurs
-          ingrédients et les méthodes les plus traditionnelles pour préparer nos
-          sushis.
+          Chaque pièce est une œuvre d'art, façonnée par des maîtres sushis
+          dévoués à la perfection. Nous sélectionnons rigoureusement nos
+          poissons pour vous offrir une fraîcheur absolue et un voyage gustatif
+          au cœur de Tokyo.
         </p>
       </div>
     </section>
 
     <section class="popular-foods" id="menu">
       <h2 class="popular-foods__title" data-aos="flip-up">
-        Nos Sushis Populaires
+        Nos Créations Signatures
       </h2>
 
       <div
@@ -157,7 +154,7 @@
             src="assets/sushi-12.png"
             alt="sushi 12"
           />
-          <h4 class="popular-foods__card-title">Chezu Sushi</h4>
+          <h4 class="popular-foods__card-title">Le Dragon Roll</h4>
 
           <div class="popular-foods__card-details flex-between">
             <div class="popular-foods__card-rating">
@@ -175,7 +172,7 @@
             src="assets/sushi-11.png"
             alt="sushi 11"
           />
-          <h4 class="popular-foods__card-title">Original Sushi</h4>
+          <h4 class="popular-foods__card-title">Saumon Royal</h4>
 
           <div class="popular-foods__card-details flex-between">
             <div class="popular-foods__card-rating">
@@ -193,7 +190,7 @@
             src="assets/sushi-10.png"
             alt="sushi 10"
           />
-          <h4 class="popular-foods__card-title">Ramen Sushi</h4>
+          <h4 class="popular-foods__card-title">Ramen du Chef</h4>
 
           <div class="popular-foods__card-details flex-between">
             <div class="popular-foods__card-rating">
@@ -215,10 +212,10 @@
     <section class="trending" id="food">
       <section class="trending-sushi">
         <div class="trending__content" data-aos="fade-right">
-          <p class="sushi__subtitle">Ce qui ferait plaisir | 人気メニュー</p>
-          <h3 class="sushi__title">Sushi Japonais</h3>
+          <p class="sushi__subtitle">Vos Favoris | 人気メニュー</p>
+          <h3 class="sushi__title">Les Incontournables</h3>
           <p class="sushi__description">
-            Ingrédients frais, saveurs authentiques
+            Les classiques revisités pour les palais exigeants.
           </p>
 
           <ul class="trending__list flex-between">
@@ -226,42 +223,42 @@
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Make Sushi</p>
+              <p>Maki Signature</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Oshizushi</p>
+              <p>Oshizushi Pressé</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Uramaki Sushi</p>
+              <p>Uramaki Fusion</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Nigiri Sushi</p>
+              <p>Nigiri Premium</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Temaki Sushi</p>
+              <p>Temaki Croustillant</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Inari Sushi</p>
+              <p>Inari Douceur</p>
             </li>
           </ul>
         </div>
@@ -297,10 +294,10 @@
         </div>
 
         <div class="trending__content" data-aos="fade-left">
-          <p class="sushi__subtitle">Ce qui ferait plaisir | 人気メニュー</p>
-          <h3 class="sushi__title">Boissons Japonaises</h3>
+          <p class="sushi__subtitle">Accords Parfaits | 飲み物</p>
+          <h3 class="sushi__title">Élixirs & Rafraîchissements</h3>
           <p class="sushi__description">
-            Boissons fraîches, saveurs authentiques
+            Des thés et sakés sélectionnés pour sublimer votre repas.
           </p>
 
           <ul class="trending__list flex-between">
@@ -308,42 +305,42 @@
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Green Tea</p>
+              <p>Thé Sencha</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Matcha</p>
+              <p>Matcha Impérial</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Green Tea</p>
+              <p>Saké Junmai</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Green Tea</p>
+              <p>Bière Asahi</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Green Tea</p>
+              <p>Limonade Yuzu</p>
             </li>
 
             <li>
               <div class="trending__icon flex-center">
                 <img src="assets/check.svg" alt="check" />
               </div>
-              <p>Green Tea</p>
+              <p>Thé Genmaicha</p>
             </li>
           </ul>
         </div>
