--- a/index.html
+++ b/index.html
@@ -347,6 +347,41 @@
       </section>
     </section>
 
+    <section class="subscription flex-center" id="services">
+      <h2 data-aos="flip-down">Recevez nos Offres Exclusives <br /></h2>
+      <p data-aos="fade-up">
+        Inscrivez-vous à notre newsletter pour recevoir les dernières actualités
+        et mises à jour.
+      </p>
+      <div data-aos="fade-up" class="subscription__form">
+        <input type="text" placeholder="Entrez votre email" />
+        <button>S'inscrire</button>
+      </div>
+    </section>
+
+    <footer class="footer flex-between">
+      <h3 class="footer__logo"><span>Sushi</span> Delice</h3>
+
+      <ul class="footer__nav">
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#food">Nos Plats</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about-us">A propos</a></li>
+      </ul>
+
+      <ul class="footer__social">
+        <li class="flex-center">
+          <image src="assets/facebook.svg" alt="facebook" />
+        </li>
+        <li class="flex-center">
+          <image src="assets/instagram.svg" alt="instagram" />
+        </li>
+        <li class="flex-center">
+          <image src="assets/twitter.svg" alt="twitter" />
+        </li>
+      </ul>
+    </footer>
+
     <script type="module" src="js/script.js"></script>
   </body>
 </html>
